# myLlmtuneRepoAdvanced_pipline_finetuning

./: README.md  learnings.md  openai_oss_ADVANCED_fine_tuning_trelis.ipynb  pyproject.toml  todo.md
config/: comprehensive-qa-config.json  config.json  flash-2.0-config.json  o4-mini-config.json  pro-2.5-config.json  r1-config.json  sonnet-3.5-config.json
data/dataset/: axess_chat.jsonl  axess_instruct.jsonl  axess_rag.jsonl
data/raw/: Choosing an Access System (1).docx
data/summaries/: Axess Brochure (1)_summary.json  Axess DCU & HHU - Product Information (1)_summary.json  Axess Direct Injection Fittings - Product Information (1)_summary.json  Axess Electrical Resistance (ER) Probes - Product Information March 2025 (1)_summary.json  Axess HIVE Brochure (1)_summary.json  Axess HP Coupon Holders March 2025 rev1 (1)_summary.json  Choosing an Access System (1)_summary.json  Choosing an Access System – Hydraulic or Mechanical (1)_summary.json  (+4 more)
refs/: ingestion.md  marker-pdf.md  markitdown.md  nomic-modern-bert.md
test-scripts/: FIT 5th Edition Rulebook_gemini.md  FIT 5th Edition Rulebook_markitdown.md  create_touch_rugby_dataset.py  debug_marker.py  pdf_to_markdown.py  test_dataset_loading.py  test_openrouter.py
utils/: build_dataset_iterative.py  chunk.py  create_dataset.py  generate_qa.py  ingest.py  summarize.py
visualisation/: .gitignore  README.md  check_embeddings.py  compare_embeddings.py  compare_embeddings.py.new  compare_tags.py  embed_utils.py  generate_embeddings.py  generate_tags.py  pyproject.toml  visualize_embeddings.py  visualize_split.py
(+315 files in other folders)
